Be precise about dependencies
We also bump Dockerfiles

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -6,6 +6,6 @@ changelog:
       exclude:
         labels:
           - dependencies
-    - title: 'GitHub Actions dependencies :shipit:'
+    - title: 'Dependencies :shipit:'
       labels:
         - dependencies
